--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,27 @@
-<p>
-  heroes works!
-</p>
+<section>
+  <h2>Heroes</h2>
+
+  <div>
+    <label>
+      Hero name:
+      <input #heroName />
+    </label>
+
+    <!-- (clck) passes inpu value to add() and then clears the input -->
+    <button (click)="add(heroName.value); heroName.value=''">
+      add
+    </button>
+  </div>
+
+  <ul class="heroes">
+    <li *ngFor="let hero of heroes">
+      <a routerLink="/detail/{{hero.id}}">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+      </a>
+      <button class="delete" title="delete hero"
+              (click)="delete(hero)">
+        &times;
+      </button>
+    </li>
+  </ul>
+</section>
